--- a/src/main/resources/templates/emp/add.html
+++ b/src/main/resources/templates/emp/add.html
@@ -53,36 +53,39 @@
         <!-- 引入侧边栏 -->
         <div th:replace="~{commons/bar::#sidebar(activeUri='emps')}"></div>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <h2><a class="btn btn-sm btn-success" href="#" th:href="@{/emp}">员工添加</a></h2>
-            <div class="table-responsive">
-                <table class="table table-striped table-sm">
-                    <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>lastName</th>
-                        <th>email</th>
-                        <th>gender</th>
-                        <th>department</th>
-                        <th>birth</th>
-                        <th>操作</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="emp:${emps}">
-                        <td th:text="${emp.id}"></td>
-                        <td th:text="${emp.getLastName()}"></td>
-                        <td th:text="${emp.email}"></td>
-                        <td>[[${emp.gender}==0?'female':'male']]</td>
-                        <td th:text="${emp.department.departmentName}"></td>
-                        <td th:text="${#dates.format(emp.birth,'yyyy-MM-dd HH:mm')}"></td>
-                        <td>
-                            <button class="btn btn-sm btn-primary">编辑</button>
-                            <button class="btn btn-sm btn-danger">删除</button>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
+            <form>
+                <div class="form-group">
+                    <label>lastName</label>
+                    <input type="text" class="form-control" placeholder="zhangsan">
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="email" class="form-control" placeholder="zhangsan@example.com">
+                </div>
+                <div class="form-group">
+                    <label>Gender</label>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="gender" value="1">
+                        <label class="form-check-label">male</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="gender" value="0">
+                        <label class="form-check-label">female</label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label>department</label>
+                    <select class="form-control">
+                        <!-- 提交的是部门的id -->
+                        <option th:each="dept:${depts}" th:text="${dept.departmentName}" th:value="${dept.id}"></option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label>Birth</label>
+                    <input type="text" class="form-control" placeholder="zhangsan">
+                </div>
+                <button type="submit" class="btn btn-primary">添加</button>
+            </form>
         </main>
     </div>
 </div>
