--- a/src/main/resources/templates/emp/add.html
+++ b/src/main/resources/templates/emp/add.html
@@ -53,14 +53,14 @@
         <!-- 引入侧边栏 -->
         <div th:replace="~{commons/bar::#sidebar(activeUri='emps')}"></div>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <form>
+            <form th:action="@{/emp}" method="post">
                 <div class="form-group">
                     <label>lastName</label>
-                    <input type="text" class="form-control" placeholder="zhangsan">
+                    <input name="lastName" type="text" class="form-control" placeholder="zhangsan">
                 </div>
                 <div class="form-group">
                     <label>Email</label>
-                    <input type="email" class="form-control" placeholder="zhangsan@example.com">
+                    <input name="email" type="email" class="form-control" placeholder="zhangsan@example.com">
                 </div>
                 <div class="form-group">
                     <label>Gender</label>
@@ -75,14 +75,14 @@
                 </div>
                 <div class="form-group">
                     <label>department</label>
-                    <select class="form-control">
+                    <select class="form-control" name="department.id">
                         <!-- 提交的是部门的id -->
                         <option th:each="dept:${depts}" th:text="${dept.departmentName}" th:value="${dept.id}"></option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label>Birth</label>
-                    <input type="text" class="form-control" placeholder="zhangsan">
+                    <input type="date" name="birth" class="form-control" placeholder="2020/05/06">
                 </div>
                 <button type="submit" class="btn btn-primary">添加</button>
             </form>
