--- a/src/main/resources/templates/emp/add.html
+++ b/src/main/resources/templates/emp/add.html
@@ -53,23 +53,31 @@
         <!-- 引入侧边栏 -->
         <div th:replace="~{commons/bar::#sidebar(activeUri='emps')}"></div>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+            <!-- 需要去区分是修改还是添加页面 -->
             <form th:action="@{/emp}" method="post">
+                <!-- 发送put请求发送员工数据 -->
+                <!--
+                1.springMvc中配置HiddenHttpMethodFilter
+                2.页面传建一个post
+                3.创建一个input项，name='_method';值就是我们指定的请求格式-->
+                <input type="hidden" name="_method" th:if="${emp!=null}" value="put">
+                <input type="hidden" name="id" th:if="${emp!=null}" th:value="${emp.id}">
                 <div class="form-group">
                     <label>lastName</label>
-                    <input name="lastName" type="text" class="form-control" placeholder="zhangsan">
+                    <input name="lastName" type="text" class="form-control" placeholder="zhangsan" th:value="${emp!=null}?${emp.lastName}">
                 </div>
                 <div class="form-group">
                     <label>Email</label>
-                    <input name="email" type="email" class="form-control" placeholder="zhangsan@example.com">
+                    <input name="email" type="email" class="form-control" placeholder="zhangsan@example.com" th:value="${emp!=null}?${emp.email}">
                 </div>
                 <div class="form-group">
                     <label>Gender</label>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="gender" value="1">
+                        <input class="form-check-input" type="radio" name="gender" value="1" th:checked="${emp!=null}?${emp.gender==1}">
                         <label class="form-check-label">male</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="gender" value="0">
+                        <input class="form-check-input" type="radio" name="gender" value="0" th:checked="${emp!=null}?${emp.gender==1}">
                         <label class="form-check-label">female</label>
                     </div>
                 </div>
@@ -77,14 +85,14 @@
                     <label>department</label>
                     <select class="form-control" name="department.id">
                         <!-- 提交的是部门的id -->
-                        <option th:each="dept:${depts}" th:text="${dept.departmentName}" th:value="${dept.id}"></option>
+                        <option th:selected="${emp!=null}?${emp.department.id==dept.id}" th:each="dept:${depts}" th:text="${dept.departmentName}" th:value="${dept.id}"></option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label>Birth</label>
-                    <input type="date" name="birth" class="form-control" placeholder="2020/05/06">
+                    <input type="date" name="birth" class="form-control" placeholder="2020/05/06" th:value="${emp!=null}?${#dates.format(emp.birth, 'yyyy-MM-dd')}">
                 </div>
-                <button type="submit" class="btn btn-primary">添加</button>
+                <button type="submit" class="btn btn-primary" th:text="${emp!=null}?修改:添加">添加</button>
             </form>
         </main>
     </div>
