--- a/src/main/resources/templates/emp/add.html
+++ b/src/main/resources/templates/emp/add.html
@@ -60,24 +60,24 @@
                 1.springMvc中配置HiddenHttpMethodFilter
                 2.页面传建一个post
                 3.创建一个input项，name='_method';值就是我们指定的请求格式-->
-                <input type="hidden" name="_method" th:if="${emp!=null}" value="put">
-                <input type="hidden" name="id" th:if="${emp!=null}" th:value="${emp.id}">
+                <input type="hidden" name="_method" th:if="${emp!=null}" value="put"/>
+                <input type="hidden" name="id" th:if="${emp!=null}" th:value="${emp.id}"/>
                 <div class="form-group">
                     <label>lastName</label>
-                    <input name="lastName" type="text" class="form-control" placeholder="zhangsan" th:value="${emp!=null}?${emp.lastName}">
+                    <input name="lastName" type="text" class="form-control" placeholder="zhangsan" th:value="${emp!=null}?${emp.lastName}"/>
                 </div>
                 <div class="form-group">
                     <label>Email</label>
-                    <input name="email" type="email" class="form-control" placeholder="zhangsan@example.com" th:value="${emp!=null}?${emp.email}">
+                    <input name="email" type="email" class="form-control" placeholder="zhangsan@example.com" th:value="${emp!=null}?${emp.email}"/>
                 </div>
                 <div class="form-group">
                     <label>Gender</label>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="gender" value="1" th:checked="${emp!=null}?${emp.gender==1}">
+                        <input class="form-check-input" type="radio" name="gender" value="1" th:checked="${emp!=null}?${emp.gender==1}"/>
                         <label class="form-check-label">male</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="gender" value="0" th:checked="${emp!=null}?${emp.gender==1}">
+                        <input class="form-check-input" type="radio" name="gender" value="0" th:checked="${emp!=null}?${emp.gender==1}"/>
                         <label class="form-check-label">female</label>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="form-group">
                     <label>Birth</label>
-                    <input type="date" name="birth" class="form-control" placeholder="2020/05/06" th:value="${emp!=null}?${#dates.format(emp.birth, 'yyyy-MM-dd')}">
+                    <input type="date" name="birth" class="form-control" placeholder="2020/05/06" th:value="${emp!=null}?${#dates.format(emp.birth, 'yyyy-MM-dd')}"/>
                 </div>
                 <button type="submit" class="btn btn-primary" th:text="${emp!=null}?修改:添加">添加</button>
             </form>
