--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 
-    <title>404-对不起！您访问的页面不存在</title>
+    <title>[[${status}]]-对不起！您访问的页面不存在</title>
 
 
     <style type="text/css">
@@ -79,6 +79,7 @@
     <div class="txtbox">
 
 
+        <p>时间：[[${timestamp}]]</p>
         <p>对不起，您请求的页面不存在、或已被删除、或暂时不可用</p>
 
 
